--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body{
 .header{
     grid-column: 2/-1;
     grid-row: 1/2;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
 
   /*  border-style: solid;
     border-color: rgb(216, 11, 223);*/
@@ -126,11 +126,57 @@ a{
      
         width:20px;
         height:20px;
+        
     }
     .user-logo{
-        fill: red;
+        fill:#FACC15;
         width: 40px;
         height: 40px;
+        
     }
+}
+
+.greeting{
+    
+    border-style: solid;
+    border-color: red;
+    padding: 0px 0px 20px 20px;
+    display: grid;
+    grid-template: 1fr / 0.1fr 1fr;
+    
+    font-size: 1em;
+    
+    .info{
+        display: flex;
+        flex-direction:column;
+        
+        padding-top: 0px;
+        p,h2,h5{
+            margin-top:0px;
+            margin-bottom: 0px;
+        }
+    }
+    svg{
+        width: 50px;
+        height: 50px;
+        fill: #FACC15;
+    }
+}
+
+.functions{
+    max-height: 51px;
+    border-style: solid;
+    border-color: silver;
+  /*  padding: 20px 0px 0px 100px;
+*/
+    display: flex;
+    gap: 17px;
+   
+    
+    .button{
+        
+       
+    }
+    
 }
 /*Code for header end*/
