--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ a{
 /*Code for header Start*/
 .header{
     display: grid;
-    grid-template: 1fr 1fr/ 0.75fr 0.25fr;
+    grid-template: 1fr 1fr/ 0.75fr 0.5fr;
 }
 
 .header .searchbar {
@@ -103,14 +103,14 @@ a{
     align-items: center;
     gap:10px;
     padding-left: 25px;
+   
     svg{
     fill:black;
     width:20px;
     height:20px;
-    
     }
     input{
-        width: 70%;
+        width: 90%;
         background-color: #E2E8F0;
         border-radius:10px;
         height: 40%;
@@ -120,8 +120,9 @@ a{
 .header .user-links{
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
     gap: 15px;
+    margin-right:15%;
     svg{
      
         width:20px;
@@ -138,8 +139,8 @@ a{
 
 .greeting{
     
-    border-style: solid;
-    border-color: red;
+ /*   border-style: solid;
+    border-color: red;*/
     padding: 0px 0px 20px 20px;
     display: grid;
     grid-template: 1fr / 0.1fr 1fr;
@@ -164,19 +165,76 @@ a{
 }
 
 .functions{
-    max-height: 51px;
-    border-style: solid;
-    border-color: silver;
-  /*  padding: 20px 0px 0px 100px;
-*/
+    
+   /* border-style: solid;
+    border-color: rgba(36, 12, 250, 0.452);*/
     display: flex;
     gap: 17px;
-   
+    justify-content: center;
+    align-items: center;
+    padding-right: 10px;
     
-    .button{
-        
-       
+    .func-button{
+        height: 50%;
+        padding: 0px 30px 0px 30px;
+        font-weight: 950;
+        color: white;
+        background-color: #1992D4;
+        border-radius: 30px;
+        border-style: none;
+    
     }
     
 }
 /*Code for header end*/
+/*code for main content*/
+.main-content{
+    display: grid;
+    grid-template: .6fr .5fr/ 1fr .4fr;
+    
+}
+.projects{
+    grid-column: 1/2;
+    grid-row: 1/-1;
+    border-style: solid;
+
+    padding:10px;
+
+    
+     
+      ul,li{
+        list-style:none;
+      }
+      ul{
+        height: 100%;
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+      }
+       li a{
+        text-decoration:none;
+        color:#000;
+        background:#ffc;
+        display:block;
+        height:10em;
+        width:70%;
+        padding:1em;
+        margin: 10px;
+      }
+      
+}
+.announcement{
+    grid-column: 2/-1;
+    grid-row: 1/2;
+    border-style: solid;
+    border-color: red;
+}
+.trending{
+    grid-column: 2/-1;
+    grid-row: 2/-1;
+    border-style: solid;
+    border-color: blue;
+
+}
+/*end code for main content*/
