--- a/style.css
+++ b/style.css
@@ -1,20 +1,23 @@
 html,body{
-    width:100%;
-    height:100%;
+    width:100vw;
+    height:100vh;
     margin: 0px;
   /*  border-style: solid;
     border-color: red;*/
 }  
 body{
- /*   border-style: solid;/*delete at end*/
-  /*  border-color: black;*/
+    width:100vw;
+    height:100vh;
+   border-style: solid;/*delete at end*/
+    border-color: black;
+    min-height: 100%;
     display: grid;
     grid-template: minmax(90px, 1fr) minmax(190px,4fr)/ minmax(190px,1fr) minmax(700px,5fr);
 }
 /*Setting the basic layout*/
 .sidebar{
     
-    grid-column: 1/2;
+    grid-column: 1/3;
     grid-row: 1/-1;
     background-color: #1992D4;
 
@@ -22,7 +25,7 @@ body{
     border-color: brown;*/
 }
 .header{
-    grid-column: 2/-1;
+    grid-column: 2/3;
     grid-row: 1/2;
     background-color: rgb(255, 255, 255);
 
@@ -30,7 +33,8 @@ body{
     border-color: rgb(216, 11, 223);*/
 }
 .main-content{
-    grid-column: 2/-1;
+    min-height: 100%;
+    grid-column: 2/3;
     grid-row: 2/-1;
     background-color: #E2E8F0;
 
@@ -144,7 +148,7 @@ a{
     padding: 0px 0px 20px 20px;
     display: grid;
     grid-template: 1fr / 0.1fr 1fr;
-    
+    align-items:start;
     font-size: 1em;
     
     .info{
@@ -171,9 +175,9 @@ a{
     display: flex;
     gap: 17px;
     justify-content: center;
-    align-items: center;
-    padding-right: 10px;
     
+    padding-right: 10px;
+    align-items:start;
     .func-button{
         height: 50%;
         padding: 0px 30px 0px 30px;
@@ -190,40 +194,63 @@ a{
 /*code for main content*/
 .main-content{
     display: grid;
-    grid-template: .6fr .5fr/ 1fr .4fr;
+    grid-template: minmax(100px,.6fr).5fr/ 1fr .4fr;
+    
+    
     
 }
 .projects{
     grid-column: 1/2;
-    grid-row: 1/-1;
+    grid-row: 1/3;
     border-style: solid;
+   
+    display: grid;
+    grid-template-rows: 10% minmax(200px,1fr);
+    h3{
+        margin : 5px 0px 5px 5px;
+    }
+    .cards{
+        border-style: solid;
+        border-color: rgb(78, 2, 255);
 
-    padding:10px;
+        display: grid;
+        grid-template: repeat(3,1fr) /repeat(2,1fr) ;
+        align-content: start;
+        gap: 10px;
+        padding: 0px 10px 0px 10px;
 
-    
-     
-      ul,li{
-        list-style:none;
-      }
-      ul{
-        height: 100%;
-        width: 100%;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-      }
-       li a{
-        text-decoration:none;
-        color:#000;
-        background:#ffc;
-        display:block;
-        height:10em;
-        width:70%;
-        padding:1em;
-        margin: 10px;
-      }
-      
+
+    }     
 }
+.cards > .card{
+    font-size: small;
+    border-style: none;
+    border-left-style: solid;
+    border-radius: 11px;
+    border-left-width: 7px;
+    border-left-color: #F0B429;
+    background-color: white;
+    padding:10px;
+    padding-top: 0px;
+    
+    svg{
+        width: 15px;
+        height: 15px;
+    }
+    .icons{
+        display: flex;
+        justify-content: flex-end;
+        gap:15px
+    }
+}
+.card-title{
+    margin-bottom: 0px;
+}
+.card-text{
+    margin-top: 0px;
+}
+
+
 .announcement{
     grid-column: 2/-1;
     grid-row: 1/2;
@@ -238,3 +265,44 @@ a{
 
 }
 /*end code for main content*/
+
+/*Start code for the announcement section*/
+#announcement-main-title{
+    margin-bottom: 5px;
+    
+}
+.updates-block{
+    font-size: x-small;
+    display: grid;
+    grid-template: repeat(3,1fr)/1fr;
+    align-content: start;
+    border-radius: 5px;
+    background-color: white;
+    padding: 10px;
+  
+
+}
+.announcement1{
+    grid-row: 1/2;
+    border-style: solid;
+    border-color: blue;
+}
+.announcement2{
+    grid-row: 2/3;
+    border-style: solid;
+    border-color: green;
+}
+.announcement3{
+    grid-row: 3/-1;
+    border-style: solid;
+    border-color: red;
+}
+
+.announcement-title{
+    margin-top:0px;
+}
+.announce-item{
+  /*  border-style: solid;
+    border-color: purple;*/
+}
+/* end code the announement section*/
